force-app/main/default/objects/Contact/fields/Contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18__c</fullName>
    <description>Campo de ID de Salesforce de 18 digitos</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo de ID de Salesforce de 18 digitos</inlineHelpText>
    <label>Contact ID 18</label>
    <type>Text</type>
</CustomField>