force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Auto_Reminder_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Verifique si este contacto no desea recibir correos electrónicos  automáticos sobre sus próximos turnos. Se utiliza en la regla de flujo de trabajo del Email recordatorio de horas de trabajo voluntario</inlineHelpText>
    <label>Volunteer Auto-Reminder Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>