force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Hours__c</fullName>
    <inlineHelpText>Número total de horas completas. No se incluyen las horas con otros valores de estado.</inlineHelpText>
    <label>Volunteer Hours</label>
    <summarizedField>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Hours_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>GW_Volunteers__Volunteer_Hours__c.GW_Volunteers__Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>