force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Last_Web_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Last_Web_Signup_Date__c</fullName>
    <inlineHelpText>Fecha del más reciente registro del voluntario en la web. Se utiliza para activar el flujo de trabajo para las notificaciones y correos electrónicos de agradecimiento.</inlineHelpText>
    <label>Volunteer Last Web Signup Date</label>
    <type>Date</type>
</CustomField>