force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Manager_Notes__c</fullName>
    <inlineHelpText>Notas sobre el voluntario que el encargado de voluntario o personal de la organización desee guardar en sus registros.</inlineHelpText>
    <label>Volunteer Manager Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>