force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Notes__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Notes__c</fullName>
    <inlineHelpText>Notas del voluntario. Tenga en cuenta que el formulario de registro web anexa los comentarios del volntario a este campo.</inlineHelpText>
    <label>Volunteer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>