force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Organization__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Organization__c</fullName>
    <inlineHelpText>La organización, empresa o grupo de contacto se ofrecen como voluntarios en nombre de.</inlineHelpText>
    <label>Volunteer Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>