force-app/main/default/objects/Contact/fields/Marca_estrategica__c.field-meta.xml
<CustomField>
    <fullName>Marca_estrategica__c</fullName>
    <label>Marca estratégica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potencial Gran Empr - Fund</fullName>
            </value>
            <value>
                <fullName>Forzar Gran Empr - Fund</fullName>
            </value>
            <value>
                <fullName>Reactivación</fullName>
            </value>
            <value>
                <fullName>Vinculada</fullName>
            </value>
            <value>
                <fullName>Potencial Gran Donante</fullName>
            </value>
            <value>
                <fullName>Forzar Gran Donante</fullName>
            </value>
            <value>
                <fullName>Público Especial</fullName>
            </value>
            <value>
                <fullName>Otros 121</fullName>
            </value>
            <value>
                <fullName>Forzar Mid+</fullName>
            </value>
            <value>
                <fullName>Influencer Estratégico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>