force-app/main/default/objects/Contact/fields/msf_2yearsPositiveCallsIncrQuotaETL__c.field-meta.xml
<CustomField>
    <fullName>msf_2yearsPositiveCallsIncrQuotaETL__c</fullName>
    <label>Llamadas aumQ cierre positivo 2 años</label>
    <length>255</length>
    <type>Text</type>
</CustomField>