force-app/main/default/objects/Contact/fields/msf_Age__c.field-meta.xml
<CustomField>
    <fullName>msf_Age__c</fullName>
    <formula>IF(!ISBLANK(Birthdate),  
  (FLOOR((TODAY() - Birthdate) / 365.25)),
  YEAR(TODAY()) -  VALUE(msf_birthyear__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>