force-app/main/default/objects/Contact/fields/msf_AllPositiveCallsIncrQuotaETL__c.field-meta.xml
<CustomField>
    <fullName>msf_AllPositiveCallsIncrQuotaETL__c</fullName>
    <label>Todas llamadas aumQ cierre positivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>