force-app/main/default/objects/Contact/fields/msf_AlternateEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_AlternateEmailBackup__c</fullName>
    <label>Email alternativo 2 (Backup)</label>
    <type>Email</type>
</CustomField>