force-app/main/default/objects/Contact/fields/msf_AnnualizedQuotaChange__c.field-meta.xml
<CustomField>
    <fullName>msf_AnnualizedQuotaChange__c</fullName>
    <label>Incremento de cuota anualizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>