force-app/main/default/objects/Contact/fields/msf_AverageDonorValue__c.field-meta.xml
<CustomField>
    <fullName>msf_AverageDonorValue__c</fullName>
    <label>Valor promedio de donante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>