force-app/main/default/objects/Contact/fields/msf_Baja_alta_mismo_mes__c.field-meta.xml
<CustomField>
    <fullName>msf_Baja_alta_mismo_mes__c</fullName>
    <description>Campo que calcula si el contacto se ha dado de Baja de su Recurring Donation en el mismo mes del Alta</description>
    <formula>IF(AND(MONTH(msf_EntryDateCurrentRecurringDonor__c) = MONTH(msf_LastRecurringDonationDate__c),YEAR(msf_EntryDateCurrentRecurringDonor__c) = YEAR(msf_LastRecurringDonationDate__c))
,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baja en mismo mes de Alta</label>
    <type>Checkbox</type>
</CustomField>