force-app/main/default/objects/Contact/fields/msf_Baja_siguiente_anyo_Alta__c.field-meta.xml
<CustomField>
    <fullName>msf_Baja_siguiente_anyo_Alta__c</fullName>
    <description>Campo que calcula si el contacto se ha dado de Baja de su Recurring Donation en los siguientes 12  meses al Alta</description>
    <formula>IF((msf_LastRecurringDonationDate__c &lt; ADDMONTHS(msf_EntryDateCurrentRecurringDonor__c,12)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baja en siguiente año de Alta</label>
    <type>Checkbox</type>
</CustomField>