force-app/main/default/objects/Contact/fields/msf_BeginDateMSF__c.field-meta.xml
<CustomField>
    <fullName>msf_BeginDateMSF__c</fullName>
    <description>This field is to register the first time in MSF</description>
    <label>Fecha alta MSF</label>
    <type>Date</type>
</CustomField>