force-app/main/default/objects/Contact/fields/msf_BehavioralSegment__c.field-meta.xml
<CustomField>
    <fullName>msf_BehavioralSegment__c</fullName>
    <label>Segmento comportamental</label>
    <length>255</length>
    <type>Text</type>
</CustomField>