force-app/main/default/objects/Contact/fields/msf_BehavioralSegmentMASS__c.field-meta.xml
<CustomField>
    <fullName>msf_BehavioralSegmentMASS__c</fullName>
    <label>Cluster Mass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MASS1</fullName>
            </value>
            <value>
                <fullName>MASS2</fullName>
            </value>
            <value>
                <fullName>MASS3</fullName>
            </value>
            <value>
                <fullName>MASS4</fullName>
            </value>
            <value>
                <fullName>MASS5</fullName>
            </value>
            <value>
                <fullName>MASS6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>