force-app/main/default/objects/Contact/fields/msf_BehavioralSegmentMASSDesc__c.field-meta.xml
<CustomField>
    <fullName>msf_BehavioralSegmentMASSDesc__c</fullName>
    <formula>if(TEXT(msf_BehavioralSegmentMASS__c) == &quot;MASS1&quot;, $Label.MSF_F_FIELDS_CONTACT_MASS1,
if(TEXT(msf_BehavioralSegmentMASS__c) == &quot;MASS2&quot;, $Label.MSF_F_FIELDS_CONTACT_MASS2,
if(TEXT(msf_BehavioralSegmentMASS__c) == &quot;MASS3&quot;, $Label.MSF_F_FIELDS_CONTACT_MASS3,
if(TEXT(msf_BehavioralSegmentMASS__c) == &quot;MASS4&quot;, $Label.MSF_F_FIELDS_CONTACT_MASS4,
if(TEXT(msf_BehavioralSegmentMASS__c) == &quot;MASS5&quot;, $Label.MSF_F_FIELDS_CONTACT_MASS5,
if(TEXT(msf_BehavioralSegmentMASS__c) == &quot;MASS6&quot;, $Label.MSF_F_FIELDS_CONTACT_MASS6,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster MASS desc</label>
    <type>Text</type>
</CustomField>