force-app/main/default/objects/Contact/fields/msf_BehavioralSegmentMB__c.field-meta.xml
<CustomField>
    <fullName>msf_BehavioralSegmentMB__c</fullName>
    <label>Cluster MIDBIG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MB_S1</fullName>
            </value>
            <value>
                <fullName>MB_S2</fullName>
            </value>
            <value>
                <fullName>MB_S3</fullName>
            </value>
            <value>
                <fullName>MB_S4</fullName>
            </value>
            <value>
                <fullName>MB_D1</fullName>
            </value>
            <value>
                <fullName>MB_D2</fullName>
            </value>
            <value>
                <fullName>MB_D3</fullName>
            </value>
            <value>
                <fullName>MB_D4</fullName>
            </value>
            <value>
                <fullName>MB_D5</fullName>
            </value>
            <value>
                <fullName>MB_D6</fullName>
            </value>
            <value>
                <fullName>MB_D7</fullName>
            </value>
            <value>
                <fullName>MB_D8</fullName>
            </value>
            <value>
                <fullName>MB_D9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>