force-app/main/default/objects/Contact/fields/msf_BehavioralSegmentMBDesc__c.field-meta.xml
<CustomField>
    <fullName>msf_BehavioralSegmentMBDesc__c</fullName>
    <formula>if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_S1&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_S1,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_S2&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_S2,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_S3&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_S3,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_S4&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_S4,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D1&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D1,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D2&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D2,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D3&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D3,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D4&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D4,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D5&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D5,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D6&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D6,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D7&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D7,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D8&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D8,
if(TEXT(msf_BehavioralSegmentMB__c) == &quot;MB_D9&quot;, $Label.MSF_F_FIELDS_CONTACT_MB_D9,
&quot;&quot;)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster MIDBIG desc</label>
    <type>Text</type>
</CustomField>