force-app/main/default/objects/Contact/fields/msf_BetterNowDonorExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_BetterNowDonorExternalId__c</fullName>
    <label>Id externo donante BetterNow</label>
    <length>40</length>
    <type>Text</type>
</CustomField>