force-app/main/default/objects/Contact/fields/msf_BetterNowPromoterExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_BetterNowPromoterExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id externo promotor BetterNow</label>
    <length>40</length>
    <type>Text</type>
</CustomField>