force-app/main/default/objects/Contact/fields/msf_BigDonorContact__c.field-meta.xml
<CustomField>
    <fullName>msf_BigDonorContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Implica exclusión programa de prospectos.</inlineHelpText>
    <label>Contacto de gran donante</label>
    <type>Checkbox</type>
</CustomField>