force-app/main/default/objects/Contact/fields/msf_birthyear__c.field-meta.xml
<CustomField>
    <fullName>msf_birthyear__c</fullName>
    <inlineHelpText>Puede ser aproximado</inlineHelpText>
    <label>Año de nacimiento</label>
    <length>4</length>
    <type>Text</type>
</CustomField>