force-app/main/default/objects/Contact/fields/msf_CadenceDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_CadenceDonor__c</fullName>
    <formula>IF( msf_LifeTime__c &gt; 0,  msf_NumberOfDonations__c  / msf_LifeTime__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadencia de donante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>