force-app/main/default/objects/Contact/fields/msf_CiviCRMId__c.field-meta.xml
<CustomField>
    <fullName>msf_CiviCRMId__c</fullName>
    <label>Id CiviCRM</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>