force-app/main/default/objects/Contact/fields/msf_Community__c.field-meta.xml
<CustomField>
    <fullName>msf_Community__c</fullName>
    <label>Comunidad</label>
    <length>40</length>
    <type>Text</type>
</CustomField>