force-app/main/default/objects/Contact/fields/msf_ConfirmedLanguage__c.field-meta.xml
<CustomField>
    <fullName>msf_ConfirmedLanguage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Idioma confirmado</label>
    <type>Checkbox</type>
</CustomField>