force-app/main/default/objects/Contact/fields/msf_CongaParameters__c.field-meta.xml
<CustomField>
    <fullName>msf_CongaParameters__c</fullName>
    <description>0 - Donor 
1 - Donor &lt;&gt; Tutor 
2 - Donor &lt;&gt; Holder 
3 - Donor &lt;&gt; Tutor &lt;&gt; Holder 
4 - Donor &lt;&gt; Tutor = Holder 
5 - Quota modification 
6 - D - Donor 
7 - D - Donor &lt;&gt; Tutor 
8 - D - Donor &lt;&gt; Holder 
9 - D - Donor &lt;&gt; Tutor &lt;&gt; Holder 
10 - D - Donor &lt;&gt; Tutor = Holder</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +

&quot;&amp;queryid=[Quota]a2d3Y000009ED1x,[DonorSignature]a2d3Y000009ED22,[HolderSignature]a2d3Y000009ED27,[RepSignature]a2d3Y000009ED2C,[PaymentProfile]a2d3Y000009ED1y,[UniqueDonation]a2d3Y000009ED28&quot; + 

&quot;&amp;reportid= &quot; + 

CASE(msf_F2FTemplateNumber__c, 
  0, &quot;&amp;templateid=a2l3Y000000dQp1&quot;, 
  1, &quot;&amp;templateid=a2l3Y000000dQp6&quot;,
  2, &quot;&amp;templateid=a2l3Y000000dQpB&quot;,
  3, &quot;&amp;templateid=a2l3Y000000dQpG&quot;,
  4, &quot;&amp;templateid=a2l3Y000000dQpL&quot;,
  5, &quot;&amp;templateid=a2l3Y000000dQpH&quot;,
  6, &quot;&amp;templateid=a2l3Y000000dQpQ&quot;,
  7, &quot;&amp;templateid=a2l3Y000000dQpa&quot;,
  8, &quot;&amp;templateid=a2l3Y000000dQpV&quot;,
  9, &quot;&amp;templateid=a2l3Y000000dQpf&quot;,
 10, &quot;&amp;templateid=a2l3Y000000dQpI&quot;,
     &quot;&amp;templateid=a2l3Y000000dQp1&quot;)+ 

&quot;&amp;qmode=SalesforceFile&quot; + 
&quot;&amp;defaultpdf=1&quot;+ 
&quot;&amp;tpv=1&quot;</formula>
    <label>Parámetros conga</label>
    <type>Text</type>
</CustomField>