force-app/main/default/objects/Contact/fields/msf_ContactDeleteReason__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactDeleteReason__c</fullName>
    <label>Motivo fin de relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethical code</fullName>
                <label>Código ético</label>
            </value>
            <value>
                <fullName>Deceased</fullName>
                <label>Fallecido</label>
            </value>
            <value>
                <fullName>Tests</fullName>
                <label>Pruebas</label>
            </value>
            <value>
                <fullName>Complaints</fullName>
                <label>Quejas</label>
            </value>
            <value>
                <fullName>Country change</fullName>
                <label>Cambio de país</label>
            </value>
            <value>
                <fullName>Disolución</fullName>
            </value>
            <value>
                <fullName>Miembro eliminado</fullName>
            </value>
            <value>
                <fullName>By ethical code</fullName>
                <isActive>false</isActive>
                <label>By ethical code</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>