force-app/main/default/objects/Contact/fields/msf_ContactInformationSummary__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactInformationSummary__c</fullName>
    <label>Resumen de los datos de contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>