force-app/main/default/objects/Contact/fields/msf_control_nifcif_vs_niffiscal__c.field-meta.xml
<CustomField>
    <fullName>msf_control_nifcif_vs_niffiscal__c</fullName>
    <description>Valida que los campos NIF/CIF y Fiscal NIF, sean idénticos (no case-sensitive)</description>
    <formula>lower(msf_NIF__c) &lt;&gt; lower(msf_fiscalNif__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valida que los campos NIF/CIF y Fiscal NIF, sean idénticos (no case-sensitive)</inlineHelpText>
    <label>control nifcif vs niffiscal</label>
    <type>Checkbox</type>
</CustomField>