force-app/main/default/objects/Contact/fields/msf_CopyTaxData__c.field-meta.xml
<CustomField>
    <fullName>msf_CopyTaxData__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que identifica si la información Fiscal del contacto debe ser copiada de los datos del contacto.</description>
    <inlineHelpText>Con el campo check marcado se copiarán los datos de Nombre, Apellido 1/ Nombre de la empresa, Apellido 2, NIF/NIE/CIF al bloque de datos fiscales.</inlineHelpText>
    <label>Copiar datos fiscales</label>
    <type>Checkbox</type>
</CustomField>