force-app/main/default/objects/Contact/fields/msf_CRMExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_CRMExternalId__c</fullName>
    <description>WebSAS Member ID</description>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>ID Miembro</label>
    <type>AutoNumber</type>
</CustomField>