force-app/main/default/objects/Contact/fields/msf_CRMHistoryIds__c.field-meta.xml
<CustomField>
    <fullName>msf_CRMHistoryIds__c</fullName>
    <label>Histórico de Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>