force-app/main/default/objects/Contact/fields/msf_DateFirstDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_DateFirstDonation__c</fullName>
    <label>Fecha de cobro de primer donativo</label>
    <type>Date</type>
</CustomField>