force-app/main/default/objects/Contact/fields/msf_DateFirstRecurringDonorQuota__c.field-meta.xml
<CustomField>
    <fullName>msf_DateFirstRecurringDonorQuota__c</fullName>
    <label>Fecha de cobro de primera cuota de socio</label>
    <type>Date</type>
</CustomField>