force-app/main/default/objects/Contact/fields/msf_DateLastCall__c.field-meta.xml
<CustomField>
    <fullName>msf_DateLastCall__c</fullName>
    <label>Fecha Última Llamada</label>
    <type>Date</type>
</CustomField>