force-app/main/default/objects/Contact/fields/msf_DateLastDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_DateLastDonation__c</fullName>
    <label>Fecha de cobro de último donativo</label>
    <type>Date</type>
</CustomField>