force-app/main/default/objects/Contact/fields/msf_DateLastDonationETL__c.field-meta.xml
<CustomField>
    <fullName>msf_DateLastDonationETL__c</fullName>
    <label>Fecha de cobro de último donativo ETL</label>
    <type>Date</type>
</CustomField>