force-app/main/default/objects/Contact/fields/msf_DateLastRecurringDonorQuota__c.field-meta.xml
<CustomField>
    <fullName>msf_DateLastRecurringDonorQuota__c</fullName>
    <label>Fecha de cobro de última cuota de socio</label>
    <type>Date</type>
</CustomField>