force-app/main/default/objects/Contact/fields/msf_DateReturnedMail1__c.field-meta.xml
<CustomField>
    <fullName>msf_DateReturnedMail1__c</fullName>
    <label>Fecha correo devuelto 1</label>
    <type>Date</type>
</CustomField>