force-app/main/default/objects/Contact/fields/msf_DateReturnedMail1Backup__c.field-meta.xml
<CustomField>
    <fullName>msf_DateReturnedMail1Backup__c</fullName>
    <label>Fecha correo devuelto 1 (Backup)</label>
    <type>Date</type>
</CustomField>