force-app/main/default/objects/Contact/fields/msf_DateReturnedMail2__c.field-meta.xml
<CustomField>
    <fullName>msf_DateReturnedMail2__c</fullName>
    <label>Fecha correo devuelto 2</label>
    <type>Date</type>
</CustomField>