force-app/main/default/objects/Contact/fields/msf_DateReturnedMail2Backup__c.field-meta.xml
<CustomField>
    <fullName>msf_DateReturnedMail2Backup__c</fullName>
    <label>Fecha correo devuelto 2 (Backup)</label>
    <type>Date</type>
</CustomField>