force-app/main/default/objects/Contact/fields/msf_DateReturnedMail3__c.field-meta.xml
<CustomField>
    <fullName>msf_DateReturnedMail3__c</fullName>
    <label>Fecha correo devuelto 3</label>
    <type>Date</type>
</CustomField>