force-app/main/default/objects/Contact/fields/msf_DateReturnedMail3Backup__c.field-meta.xml
<CustomField>
    <fullName>msf_DateReturnedMail3Backup__c</fullName>
    <label>Fecha correo devuelto 3 (Backup)</label>
    <type>Date</type>
</CustomField>