force-app/main/default/objects/Contact/fields/msf_DescAlternateEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_DescAlternateEmail__c</fullName>
    <label>Descripción email alternativo 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>