force-app/main/default/objects/Contact/fields/msf_DescAlternateEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescAlternateEmailBackup__c</fullName>
    <label>Descripción email alternativo 2 (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>