force-app/main/default/objects/Contact/fields/msf_DescHomeEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_DescHomeEmail__c</fullName>
    <label>Descripción email alternativo 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>