force-app/main/default/objects/Contact/fields/msf_DescHomeEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescHomeEmailBackup__c</fullName>
    <label>Descripción email alternativo 1 (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>