force-app/main/default/objects/Contact/fields/msf_DescHomePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_DescHomePhone__c</fullName>
    <label>Descripción fijo principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>