force-app/main/default/objects/Contact/fields/msf_DescHomePhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescHomePhoneBackup__c</fullName>
    <label>Descripción fijo principal (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>