force-app/main/default/objects/Contact/fields/msf_DescMainEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMainEmail__c</fullName>
    <label>Descripción email principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>