force-app/main/default/objects/Contact/fields/msf_DescMainEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMainEmailBackup__c</fullName>
    <label>Descripción email principal (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>