force-app/main/default/objects/Contact/fields/msf_DescMobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMobilePhone2__c</fullName>
    <label>Descripción móvil secundario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>