force-app/main/default/objects/Contact/fields/msf_DescMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMobilePhone__c</fullName>
    <label>Descripción móvil principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>