force-app/main/default/objects/Contact/fields/msf_DescMobilePhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMobilePhoneBackup__c</fullName>
    <label>Descripción móvil principal (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>