force-app/main/default/objects/Contact/fields/msf_DescMobileRestrictedMobile__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMobileRestrictedMobile__c</fullName>
    <label>Descripción móvil restringido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>