force-app/main/default/objects/Contact/fields/msf_DescMobileRestrictedMobileBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescMobileRestrictedMobileBackup__c</fullName>
    <label>Descripción móvil restringido (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>