force-app/main/default/objects/Contact/fields/msf_DescNoEspMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_DescNoEspMobilePhone__c</fullName>
    <label>Descripción móvil no español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>