force-app/main/default/objects/Contact/fields/msf_DescNoEspMobilePhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescNoEspMobilePhoneBackup__c</fullName>
    <label>Descripción móvil no español (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>