force-app/main/default/objects/Contact/fields/msf_DescNoEspPhone__c.field-meta.xml
<CustomField>
    <fullName>msf_DescNoEspPhone__c</fullName>
    <label>Descripción fijo no español</label>
    <length>255</length>
    <type>Text</type>
</CustomField>