force-app/main/default/objects/Contact/fields/msf_DescNoEspPhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescNoEspPhoneBackup__c</fullName>
    <label>Descripción fijo no español (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>