force-app/main/default/objects/Contact/fields/msf_DescOtherPhone__c.field-meta.xml
<CustomField>
    <fullName>msf_DescOtherPhone__c</fullName>
    <label>Descripción fijo secundario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>