force-app/main/default/objects/Contact/fields/msf_DescOtherPhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescOtherPhoneBackup__c</fullName>
    <label>Descripción fijo secundario (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>