force-app/main/default/objects/Contact/fields/msf_DescRestrictedEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_DescRestrictedEmail__c</fullName>
    <label>Descripción email restringido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>