force-app/main/default/objects/Contact/fields/msf_DescRestrictedEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescRestrictedEmailBackup__c</fullName>
    <label>Descripción email restringido (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>