force-app/main/default/objects/Contact/fields/msf_DescRestrictedPhone__c.field-meta.xml
<CustomField>
    <fullName>msf_DescRestrictedPhone__c</fullName>
    <label>Descripción fijo restringido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>