force-app/main/default/objects/Contact/fields/msf_DescRestrictedPhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_DescRestrictedPhoneBackup__c</fullName>
    <label>Descripción fijo restringido (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>