force-app/main/default/objects/Contact/fields/msf_DescripcionExclusionComunicaciones__c.field-meta.xml
<CustomField>
    <fullName>msf_DescripcionExclusionComunicaciones__c</fullName>
    <label>E.C. Descripción exclusión comunicación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>